force-app/main/default/objects/Organisation_Settings__c/Organisation_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Hierarchy custom settings to hold org-wide configuration</description>
    <label>Organisation Settings</label>
</CustomObject>