force-app/main/default/objects/Organisation_Settings__c/fields/Membership_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Membership_Prefix__c</fullName>
    <label>Membership Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>