force-app/main/default/objects/Organisation_Settings__c/fields/Non_Merchanised_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Non_Merchanised_Category_Name__c</fullName>
    <label>Non-Merchanised Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>