force-app/main/default/objects/Organisation_Settings__c/fields/Voucher_Points_Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Points_Target_Value__c</fullName>
    <description>Target points threshold to issue a voucher</description>
    <inlineHelpText>Target points threshold member must achieve to get a voucher</inlineHelpText>
    <label>Voucher Points Target Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>